--- a/SpringBoot-Batch-doctor/pom.xml
+++ b/SpringBoot-Batch-doctor/pom.xml
@@ -57,6 +57,10 @@
 			<artifactId>json</artifactId>
 			<version>20170516</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 
 	</dependencies>
 
